--- a/NutraBioticsBackend/Web.config
+++ b/NutraBioticsBackend/Web.config
@@ -10,7 +10,8 @@
   </configSections>
   <connectionStrings>
     <!-- Azure -->
-    <add name="DefaultConnection" connectionString="Data Source=bythewave.database.windows.net;Initial Catalog=nutrabiotics;Persist Security Info=True;User ID=Zulu;Password=Nomelose123." providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" 
+         connectionString="Data Source=bythewave.database.windows.net;Initial Catalog=nutrabiotics;Persist Security Info=True;User ID=Zulu;Password=Nomelose123." providerName="System.Data.SqlClient" />
   </connectionStrings>  
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
