--- a/NutraBioticsBackend/Web.config
+++ b/NutraBioticsBackend/Web.config
@@ -11,7 +11,8 @@
   <connectionStrings>
     <!-- Azure -->
     <add name="DefaultConnection" 
-         connectionString="Data Source=bythewave.database.windows.net;Initial Catalog=nutrabiotics;Persist Security Info=True;User ID=Zulu;Password=Nomelose123." providerName="System.Data.SqlClient" />
+         connectionString="Data Source=bythewave.database.windows.net;Initial Catalog=nutrabiotics;Persist Security Info=True;User ID=Zulu;Password=Nomelose123." 
+         providerName="System.Data.SqlClient" />
   </connectionStrings>  
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
